--- a/Changing Background/index.html
+++ b/Changing Background/index.html
@@ -1,1 +1,29 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../test/CSS/style.css">
+    <title>Document</title>
+</head>
+<div class="container">
+    <h1>Random BackGround Color changer</h1>
 
+        <p >Hex Code: <span class="Hex">#2C3E50</span></p>
+
+
+
+
+
+        <button id="bttn"> Change BackGround Color</button>
+
+</div>
+
+
+
+
+
+<body>
+    <script src="script.js"></script>
+</body>
+</html>
