--- a/Counter/index.html
+++ b/Counter/index.html
@@ -1,1 +1,32 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+</head>
+<body>
+    <main>
+        <div class="container">
+            <h1>COUNTER</h1>
+                <div class="COUNTER">
+                    <p id="text">0</p>
+                </div>
 
+        <div class="btns">
+
+            <button class="btn decrease">DECREASE</button>
+            <button class="btn reset">RESET</button>
+            <button class="btn increase">INCREASE</button>
+
+
+        </div>
+
+        </div>
+    </main>
+    
+
+<script src="script.js"></script>
+</body>
+</html>
