--- a/Expense Tracker/index.html
+++ b/Expense Tracker/index.html
@@ -1,1 +1,38 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+</head>
+<body>
+<div class="container">
+    <form id="myForm">
+        <span class="= Item">Name: <input type="text" placeholder="add an Item" name="name"></span>
+        <span class="= date">Date: <input type="date" placeholder="mm/dd/yyyy" name="datum"></span>
+        <span class="= Amount">Amount: <input type="text" placeholder="add an Amount " name="amount"></span>
+        <button type="submit">Add Expen</button>
+    
+    </form>
+
+</div>
+
+<table id="tabule">
+    <tr>
+        <th>Name</th>
+        <th>Date</th>
+        <th>Amount</th>
+        <th></th>
+    </tr>
+  
+
+
+</table>
+
+
+
+<script src="script.js"></script>
+</body>
+</html>
 
