--- a/text moving/index.html
+++ b/text moving/index.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+</head>
+<body>
+
+<h1 id="text"></h1>
+
+<div class="box">
+
+    <label for="speed">set speed</label>
+    <input type="number" id="speed" value="1" min="1" max="5" step="1">
+</div>
+
+
+<script src="script.js"></script>
+</body>
+</html>
 
