--- a/expanding gallery/index.html
+++ b/expanding gallery/index.html
@@ -1,1 +1,40 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+</head>
+<body>
+    
+<div class="container">
 
+
+    <div class="slide img1 active">
+        <h2>objevuj svět</h2>
+    </div> 
+    <div class="slide img2">
+        <h2>navštiv nádherná místa</h2>
+    </div> 
+    <div class="slide img3">
+        <h2>natezapiem</h2>
+    </div>  
+    <div class="slide img4">
+        <h2>objevuj svět</h2>
+    </div>  
+    <div class="slide img5">
+        <h2>objevuj svět</h2>
+    </div>
+
+
+
+
+</div>
+
+
+
+
+    <script src="script.js"></script>
+</body>
+</html>
