--- a/input filter/index.html
+++ b/input filter/index.html
@@ -1,1 +1,49 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+</head>
+<body>
+    <div class="filter-container">
+        <header class="header">
+            <h2 class="filter-heading">Filtr uživatelů</h2>
+            <span class="filter-sub-heading">Hledat podle jména nebo lokality</span>
+            <input type="text" class="input-filter" placeholder="vyhledat">
+        </header>
+            <ul class="user-list">
+                <!-- <li>
+                    <img src="https://randomuser.me/api/portraits/women/22.jpg" alt="">
+                    <div class="user-info">
+                        <h3>martina novortn</h3>
+                        <p>Česke Budějovice , ČR</p>
+                    </div>
+                </li>
+                <li>
+                    <img src="https://randomuser.me/api/portraits/women/2.jpg" alt="">
+                    <div class="user-info">
+                        <h3>martina novortn</h3>
+                        <p>Česke Budějovice , ČR</p>
+                    </div>
+                </li>
+                <li>
+                    <img src="https://randomuser.me/api/portraits/women/24.jpg" alt="">
+                    <div class="user-info">
+                        <h3>martina novortn</h3>
+                        <p>Česke Budějovice , ČR</p>
+                    </div>
+                </li> -->
+                <li>načítaní..</li>
+            </ul>
 
+
+
+
+
+    </div>
+
+    <script src="script.js"></script>
+</body>
+</html>
