--- a/Toggle FAQ/index.html
+++ b/Toggle FAQ/index.html
@@ -1,1 +1,37 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+</head>
+<body>
+    <div class="content">
+        <div class="box">
+            <div class="heading"> 
+                <h2>Whats our policy</h2>
+            </div>
+            <div class="text hide">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit...</p>
+            </div>
+    
+            <div class="heading"> 
+                <h2>Orders</h2>
+            </div>
+            <div class="text hide">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit... Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, dolores, atque ex a eveniet tempora aspernatur recusandae itaque qui repellendus, dolorum ipsa est quas numquam? Dignissimos cumque officiis corrupti nostrum.</p>
+            </div>
+    
+            <div class="heading"> 
+                <h2>Location</h2>
+            </div>
+            <div class="text hide">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit  Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis facere quam voluptatibus impedit voluptate tempora aliquam rem ut omnis dolore? Voluptatem odit corporis, amet veritatis commodi a hic. Placeat, ducimus!</p>
+            </div>
+        </div>
+    </div>
 
+    <script src="script.js"></script>
+</body>
+</html>
