--- a/Stopwatch/index.html
+++ b/Stopwatch/index.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+</head>
+<body>
+    <div class="content">
+     
+        <div id="display-time">00h : 00m : 00s</div>
 
+        <button id = "start">START</button>
+        <button id = "stop">STOP</button>
+        <button id="reset">RESET</button>
+    </div>
+
+
+    <script src="script.js"></script>
+</body>
+</html>
