--- a/reservation/index.html
+++ b/reservation/index.html
@@ -1,1 +1,29 @@
+<!DOCTYPE html>
+<html lang="cs">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Týdenní rozvrh</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container">
+        <div class="nav-warp">
+            <nav>
+                <a href="" class="home-page"><img src="tmavé.svg" alt=""></a>
+                <div class="icons">
+                    <a href=""><i class="fa-brands fa-facebook"></i></a>
+                    <a href=""><i class="fa-brands fa-instagram"></i></a>
+                    <a href=""><i class="fa-solid fa-map-location-dot"></i></a>
+                </div>
+            </nav>
+        </div>
+        
 
+        <table class="table-calendar"></table>
+
+
+    <script src="script.js"></script>
+</body>
+</html>
