--- a/SchemePicker/index.html
+++ b/SchemePicker/index.html
@@ -1,1 +1,40 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <title>Document</title>
+</head>
+<body>
+    <div class="container">
+      <div class="header">
+        <input id="color" type="color">
+        <select name="colors" id="colors">
+          <option value="monochrome" name="monochrome">Monochrome</option>
+          <option value="monochrome-dark" name="monochrome-dark">Monochrome-dark</option>
+          <option value="monochrome-light" name="monochrome-light">Monochrome-light</option>
+          <option value="analogic" name="analogic">Analogic</option>
+          <option value="complement" name="complement">Complement</option>
+          <option value="analogic-complement" name="analogic-complement">Analogic-complement</option>
+          <option value="triad" name="triad">Triad</option>
+          <option value="quad" name="quad">Quad</option>
+        </select>
+        <button id="btn">Get Color scheme</button>
+      </div>
+      <div class="palet"></div>
 
+
+      </div>
+
+
+    </div>
+
+
+
+
+
+  <script src="script.js"></script>
+</body>
+</html>
