--- a/MoviesWatchList/index.html
+++ b/MoviesWatchList/index.html
@@ -1,1 +1,47 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="style.css">
+  <title>Document</title>
+</head>
+<body>
+  
+<div class="container">
+  
+  <div class="header-wrapper">
+    
+    <div class="text-wrapper">
+      <h1>Find your film</h1>
+      <a href="watchlist.html">My WachList</a>
+    </div>
+    
+    <div class="search-wrapper">
+      <input class="searchInput" type="search">
+      <a class="searchBTN"><i class="fa-solid fa-magnifying-glass"></i></a>
+    </div>
 
+  </div>
+  
+
+  <div class="movies-wrapper">
+
+
+
+
+
+
+    </div>
+
+
+
+</div>
+
+
+
+
+  <script src="script.js" type="module"></script>
+</body>
+</html>
