--- a/GuitarPlayKeys/index.html
+++ b/GuitarPlayKeys/index.html
@@ -1,1 +1,30 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+  </head>
+  <body>
+    <div class="container">
+      <h1 class="title">Press key or click the Button</h1>
+      <div class="buttons-wrapper">
+        <button class="a ">
+          A <audio id="audio1" src="acousticguitar-c-chord-103782.mp3"></audio>
+        </button>
+        <button class="b">
+          B<audio id="audio2" src="guitar-in-d-89205.mp3"></audio>
+        </button>
+        <button class="c">
+          C<audio
+            id="audio3"
+            src="mandolin-strum-high-g-chord-100702.mp3"
+          ></audio>
+        </button>
+      </div>
+    </div>
 
+    <script src="script.js"></script>
+  </body>
+</html>
